Scholar link in footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,7 @@
 
       <div class="footer-col footer-col-2">
         {%- include social.html -%}
+        <a href="https://scholar.google.com/citations?user=WXJAMi0AAAAJ&hl" target="_blank">Google Scholar</a>
       </div>
 
       <div class="footer-col footer-col-3">
