--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,12 @@ layout: default
   background-size: 125%;
   width: max-width;
   height: 300px;
-  background-position: 0px -400px
+  background-position: 0px 42%
 }
 </style>
+
+<!-- background-position: 0px -400px -->
+
 
 <div class="background">
 </div>
